a lighter download display

--- a/getdown-webconsole/src/main/resources/static/webconsole/elements/config-data/config-data.html
+++ b/getdown-webconsole/src/main/resources/static/webconsole/elements/config-data/config-data.html
@@ -24,12 +24,7 @@
 
 				// initializes default if nothing has been stored
 				initializeDefaultHosturl: function () {
-					this.hosturl = "http://" + window.location.host + "/korona.resource"
-				},
-
-				// initializes default if nothing has been stored
-				initializeDefaultTerminal: function () {
-					this.terminalid = ""
+					this.host = "http://" + window.location.host
 				}
 
 			});
