add canceled property

--- a/getdown-webconsole/src/main/resources/static/webconsole/elements/download-view/download-view.html
+++ b/getdown-webconsole/src/main/resources/static/webconsole/elements/download-view/download-view.html
@@ -94,6 +94,14 @@
 						type: Array,
 						notify: true
 					},
+					finished: {
+						type: Array,
+						notify: true
+					},
+					canceled: {
+						type: Array,
+						notify: true
+					},
 					newurl: {
 						type: Array,
 						notify: true
