add property mapping for canceled downloads

--- a/getdown-webconsole/src/main/resources/static/webconsole/elements/download-view/download-view.html
+++ b/getdown-webconsole/src/main/resources/static/webconsole/elements/download-view/download-view.html
@@ -20,7 +20,8 @@
 		               active="{{active}}"
 		               waiting="{{waiting}}"
 		               finished="{{finished}}"
-		               failed="{{failed}}">
+		               failed="{{failed}}"
+		               canceled="{{canceled}}">
 		</download-data>
 
 		<paper-toolbar id="toolbar">
