use paper-progress

--- a/getdown-webconsole/src/main/resources/static/webconsole/elements/elements.html
+++ b/getdown-webconsole/src/main/resources/static/webconsole/elements/elements.html
@@ -24,6 +24,7 @@
 <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
+<link rel="import" href="../bower_components/paper-progress/paper-progress.html">
 
 <!-- other elements -->
 <link rel="import" href="../bower_components/stomp-client/stomp-client.html">
