--- a/getdown-webconsole/src/main/resources/static/webconsole/elements/download-item/download-item.html
+++ b/getdown-webconsole/src/main/resources/static/webconsole/elements/download-item/download-item.html
@@ -11,147 +11,157 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 
 <dom-module id="download-item">
-  <template>
-    <style>
-      :host {
-        display: block;
-      }
+	<template>
+		<style>
+			:host {
+				display: block;
+			}
 
-      .item {
-        @apply(--layout-horizontal);
+			.item {
+				@apply(--layout-horizontal);
 
-        margin: 5px 5px 0 5px;
-        padding: 10px;
+				margin: 5px 5px 0 5px;
+				padding: 10px;
 
-        border-radius: 8px;
-        background-color: white;
-        border: 1px solid #ddd;
-      }
+				border-radius: 8px;
+				background-color: white;
+				border: 1px solid #ddd;
+			}
 
-      .avatar {
-        height: 50px;
-        width: 50px;
-        border-radius: 20px;
-        box-sizing: border-box;
-        background-color: #DDD;
-      }
+			.avatar {
+				height: 50px;
+				width: 50px;
+				border-radius: 20px;
+				box-sizing: border-box;
+				background-color: #DDD;
+			}
 
-      .pad {
-        padding: 0 16px;
-        @apply(--layout-flex);
-        @apply(--layout-vertical);
-      }
+			.pad {
+				padding: 0 16px;
+				@apply(--layout-flex);
+				@apply(--layout-vertical);
+			}
 
-      .primary {
-        font-size: 16px;
-        font-weight: bold;
-      }
+			.primary {
+				font-size: 16px;
+				font-weight: bold;
+			}
 
-      .secondary {
-        font-size: 14px;
-      }
+			.secondary {
+				font-size: 14px;
+			}
 
-    </style>
-    <div class="item">
+		</style>
+		<div class="item">
 
-      <img class="avatar" src="{{icon}}">
+			<img class="avatar" src="{{icon}}">
 
-      <div class="pad">
-        <div class="primary">{{download.name}}</div>
-        <div class="secondary">
-          <span>{{download.state}}</span>
-          <span>{{download.progress}}</span>&nbsp;/
-          <span>{{download.size}}</span>
-          <paper-progress style="width: 100%" value="{{(download.progress / download.size)*100}}"
-                          id="paper_progress">{{download.progress}}
-          </paper-progress>
-          <div>
-            <span>{{download.message}}</span>
-          </div>
-        </div>
-      </div>
-      <iron-icon icon="cancel" on-tap="_handleCancelTap" hidden$="{{_hideCancel}}"></iron-icon>
-      <iron-icon icon="refresh" on-tap="_handleRestartTap" hidden$="{{_hideRefresh}}"></iron-icon>
-      <iron-icon icon="delete" on-tap="_handleDeleteTap"  hidden$="{{_hideDelete}}"></iron-icon>
+			<div class="pad">
+				<div class="primary">{{download.name}}</div>
+				<div class="secondary">
+					<span>{{download.state}}</span>
+					<span>{{download.progress}}</span>&nbsp;/
+					<span>{{download.size}}</span>
+					<paper-progress style="width: 100%"
+					                value="{{_progressPercentage}}"
+					                id="paper_progress">
+						{{_progressPercentage}}
+					</paper-progress>
+					<div>
+						<span>{{download.message}}</span>
+					</div>
+				</div>
+			</div>
+			<iron-icon icon="cancel" on-tap="_handleCancelTap" hidden$="{{_hideCancel}}"></iron-icon>
+			<iron-icon icon="refresh" on-tap="_handleRestartTap" hidden$="{{_hideRefresh}}"></iron-icon>
+			<iron-icon icon="delete" on-tap="_handleDeleteTap" hidden$="{{_hideDelete}}"></iron-icon>
 
-    </div>
-  </template>
-  <script>
-  (function() {
-    'use strict';
+		</div>
+	</template>
+	<script>
+		(function () {
+			'use strict';
 
-    Polymer({
-      is: 'download-item',
+			Polymer({
+				is: 'download-item',
 
-      properties: {
-        download: {
-          type: Object,
-          notify: true
-        },
-        icon:{
-          type: String,
-          notify: true,
-          computed: '_computeDownloadIconUrl(download)'
-        },
-        _hideCancel: {
-          type: Boolean,
-          computed: '_computeHideCancel(download)',
-          notify: true
-        },
-        _hideRefresh: {
-          type: Boolean,
-          computed: '_computeHideRefresh(download)',
-          notify: true
-        },
-        _hideDelete: {
-          type: Boolean,
-          computed: '_computeHideDelete(download)',
-          notify: true
-        }
-      },
-      _handleCancelTap :function(event){
-        this.fire('cancel',this.download)
-      },
-      _handleRestartTap :function(event){
-        this.fire('restart',this.download)
-      },
-      _handleDeleteTap :function(event){
-        this.fire('delete',this.download)
-      },
-      _computeHideDelete : function(d){
-        if(!d)
-          return true;
-      },
-      _computeHideCancel : function(d){
-        if(!d)
-          return true
+				properties: {
+					download: {
+						type: Object,
+						notify: true
+					},
+					icon: {
+						type: String,
+						notify: true,
+						computed: '_computeDownloadIconUrl(download)'
+					},
+					_hideCancel: {
+						type: Boolean,
+						computed: '_computeHideCancel(download)',
+						notify: true
+					},
+					_hideRefresh: {
+						type: Boolean,
+						computed: '_computeHideRefresh(download)',
+						notify: true
+					},
+					_hideDelete: {
+						type: Boolean,
+						computed: '_computeHideDelete(download)',
+						notify: true
+					},
+					_progressPercentage: {
+						type: Number,
+						computed: '_computeProgressPercentage(download)',
+						notify: true
+					}
+				},
+				_handleCancelTap: function (event) {
+					this.fire('cancel', this.download)
+				},
+				_handleRestartTap: function (event) {
+					this.fire('restart', this.download)
+				},
+				_handleDeleteTap: function (event) {
+					this.fire('delete', this.download)
+				},
+				_computeProgressPercentage: function (download) {
+					return (download.progress / download.size) * 100
+				},
+				_computeHideDelete: function (d) {
+					if (!d)
+						return true;
+				},
+				_computeHideCancel: function (d) {
+					if (!d)
+						return true
 
-        if("RUNNING" == d.state){
-          return false
-        }
+					if ("RUNNING" == d.state) {
+						return false
+					}
 
-        return true
-      },
-      _computeHideRefresh : function(d){
-        if(!d)
-          return true
+					return true
+				},
+				_computeHideRefresh: function (d) {
+					if (!d)
+						return true
 
-        if("ERROR" == d.state || "FINISHED" == d.state){
-          return false
-        }
+					if ("ERROR" == d.state || "FINISHED" == d.state) {
+						return false
+					}
 
-        return true
-      },
-      _computeDownloadIconUrl: function(d){
-        if(d){
-          var parser = document.createElement('a');
-          parser.href = d.url;
-          return parser.protocol+'//'+parser.host+'/favicon.ico'
-        }else {
-          return '../../images/icon-getdown.png'
-        }
-      }
-    });
-  })();
-  </script>
+					return true
+				},
+				_computeDownloadIconUrl: function (d) {
+					if (d) {
+						var parser = document.createElement('a');
+						parser.href = d.url;
+						return parser.protocol + '//' + parser.host + '/favicon.ico'
+					} else {
+						return '../../images/icon-getdown.png'
+					}
+				}
+			});
+		})();
+	</script>
 </dom-module>
