display prepared downloads

--- a/getdown-webconsole/src/main/resources/static/webconsole/elements/download-data/download-data.html
+++ b/getdown-webconsole/src/main/resources/static/webconsole/elements/download-data/download-data.html
@@ -129,7 +129,11 @@
 
 					return _.chain(downloads)
 							.filter(function(d){
-								return state == d.state
+								var c=d.state
+								if(state!="WAITING")
+									return state == c
+								else
+									retun state==c || "PREPARING"==c || "PREPARED"==c
 							})
 							.value()
 				},
