display prepared downloads

--- a/getdown-webconsole/src/main/resources/static/webconsole/elements/download-data/download-data.html
+++ b/getdown-webconsole/src/main/resources/static/webconsole/elements/download-data/download-data.html
@@ -133,7 +133,7 @@
 								if(state!="WAITING")
 									return state == c
 								else
-									retun state==c || "PREPARING"==c || "PREPARED"==c
+									return state==c || "PREPARING"==c || "PREPARED"==c
 							})
 							.value()
 				},
