fix restart of canceled jobs

--- a/getdown-webconsole/src/main/resources/static/webconsole/elements/download-item/download-item.html
+++ b/getdown-webconsole/src/main/resources/static/webconsole/elements/download-item/download-item.html
@@ -146,7 +146,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 					if (!d)
 						return true
 
-					if ("ERROR" == d.state || "FINISHED" == d.state) {
+					if ("ERROR" == d.state || "FINISHED" == d.state || "CANCELLED" == d.state) {
 						return false
 					}
 
