add restapi for jobs

--- a/getdown-browserext-chrome/src/main/resources/getdown/options.html
+++ b/getdown-browserext-chrome/src/main/resources/getdown/options.html
@@ -9,6 +9,6 @@
 
 <body>
 	<label></label>
-	<input id="getdown_location" type="text" />
+	<input handle="getdown_location" type="text" />
 </body>
 </html>
