--- a/getdown-webconsole/src/main/resources/static/webconsole/elements/download-list/download-list.html
+++ b/getdown-webconsole/src/main/resources/static/webconsole/elements/download-list/download-list.html
@@ -19,9 +19,9 @@
   </style>
   <template>
 
-    <iron-list id="list" class="list" items="{{downloads}}" as="download">
+    <iron-list id="list" class="list" items="[[downloads]]" as="download">
       <template>
-        <download-item download="{{download}}"></download-item>
+        <download-item download="[[download]]"></download-item>
       </template>
     </iron-list>
 
