--- a/getdown-webconsole/src/main/resources/static/webconsole/elements/download-list-widget/download-list-widget.html
+++ b/getdown-webconsole/src/main/resources/static/webconsole/elements/download-list-widget/download-list-widget.html
@@ -14,8 +14,8 @@
     <div hidden="{{!_visible}}">
     <paper-card  heading="[[title]]" style="width: 100%;" >
       <div class="card-content">
-        <download-list downloads="{{downloads}}">
-        </download-list>
+        <download-grid downloads="{{downloads}}">
+        </download-grid>
       </div>
     </paper-card>
     </div>
