--- a/getdown-webconsole/src/main/resources/static/webconsole/elements/download-list-widget/download-list-widget.html
+++ b/getdown-webconsole/src/main/resources/static/webconsole/elements/download-list-widget/download-list-widget.html
@@ -8,10 +8,11 @@
       }
       paper-card {
         width: calc(98% - 46px);
+        height: 100%;
         margin-bottom: 32px;
       }
     </style>
-    <div hidden="{{!_visible}}">
+    <div >
     <paper-card  heading="[[title]]" style="width: 100%;" >
       <div class="card-content">
         <download-grid downloads="{{downloads}}">
