--- a/getdown-webconsole/src/main/resources/static/webconsole/index.html
+++ b/getdown-webconsole/src/main/resources/static/webconsole/index.html
@@ -70,6 +70,8 @@
 
 
 
+		<!-- Main Area -->
+		<paper-header-panel main id="headerPanelMain" condenses keep-condensed-header fixed>
 
 			<iron-pages attr-for-selected="data-route" selected="{{route}}">
 
@@ -83,7 +85,7 @@
 
 			</iron-pages>
 
-
+		</paper-header-panel>
 
 	</paper-drawer-panel>
 
