--- a/getdown-webconsole/src/main/resources/static/webconsole/elements/download-view/download-view.html
+++ b/getdown-webconsole/src/main/resources/static/webconsole/elements/download-view/download-view.html
@@ -10,7 +10,6 @@
 
 			.content {
 				padding: 16px;
-				height: 100%;
 			}
 
 			paper-scroll-header-panel {
@@ -29,11 +28,7 @@
 		<paper-scroll-header-panel  fixed>
 
 			<download-data id="data"
-			               active="{{active}}"
-			               waiting="{{waiting}}"
-			               finished="{{finished}}"
-			               failed="{{failed}}"
-			               canceled="{{canceled}}">
+			               downloads="{{downloads}}">
 			</download-data>
 
 			<paper-toolbar id="toolbar">
@@ -44,32 +39,8 @@
 			</paper-toolbar>
 
 			<!-- Main Content -->
-			<div class="content">
-				<download-list-widget title="running" downloads="[[active]]"
-				                      on-cancel="_handleCancel"
-				                      on-delete="_handleDelete"
-				                      on-restart="_handleRestart">
-
-				</download-list-widget>
-				<download-list-widget title="waiting" downloads="[[waiting]]"
-				                      on-cancel="_handleCancel"
-				                      on-delete="_handleDelete"
-				                      on-restart="_handleRestart">
-
-				</download-list-widget>
-				<download-list-widget title="finished" downloads="[[finished]]"
-				                      on-cancel="_handleCancel"
-				                      on-delete="_handleDelete"
-				                      on-restart="_handleRestart">
-
-				</download-list-widget>
-				<download-list-widget title="canceled" downloads="[[canceled]]"
-				                      on-cancel="_handleCancel"
-				                      on-delete="_handleDelete"
-				                      on-restart="_handleRestart">
-
-				</download-list-widget>
-				<download-list-widget title="failed" downloads="[[failed]]"
+			<div class="content" >
+				<download-list-widget title="Current Jobs" downloads="[[downloads]]"
 				                      on-cancel="_handleCancel"
 				                      on-delete="_handleDelete"
 				                      on-restart="_handleRestart">
@@ -94,27 +65,7 @@
 				is: 'download-view',
 
 				properties: {
-					active: {
-						type: Array,
-						notify: true
-					},
-					waiting: {
-						type: Array,
-						notify: true
-					},
-					failed: {
-						type: Array,
-						notify: true
-					},
-					finished: {
-						type: Array,
-						notify: true
-					},
-					canceled: {
-						type: Array,
-						notify: true
-					},
-					newurl: {
+					downloads: {
 						type: Array,
 						notify: true
 					}
