--- a/getdown-webconsole/src/main/resources/static/webconsole/elements/elements.html
+++ b/getdown-webconsole/src/main/resources/static/webconsole/elements/elements.html
@@ -18,6 +18,7 @@
 <link rel="import" href="../bower_components/paper-material/paper-material.html">
 <link rel="import" href="../bower_components/paper-menu/paper-menu.html">
 <link rel="import" href="../bower_components/paper-scroll-header-panel/paper-scroll-header-panel.html">
+<link rel="import" href="../bower_components/paper-scroll-header-panel/paper-header-panel.html">
 <link rel="import" href="../bower_components/paper-styles/typography.html">
 <link rel="import" href="../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
@@ -29,6 +30,7 @@
 <link rel="import" href="../bower_components/stomp-client/stomp-client.html">
 <link rel="import" href="../bower_components/vaadin-grid/vaadin-grid.html">
 <link rel="import" href="../bower_components/vaadin-grid/vaadin-grid-column.html">
+<link rel="import" href="../bower_components/vaadin-grid/vaadin-grid-sorter.html"/>
 
 <!-- Add your elements here -->
 <link rel="import" href="download-grid/download-grid.html">
