--- a/getdown-ux-console/src/redux-reducers.html
+++ b/getdown-ux-console/src/redux-reducers.html
@@ -1,26 +1,40 @@
 <script src="../node_modules/redux/dist/redux.min.js"></script>
 
 <script>
+	import * as Redux from "redux"
+
 (function() {
 
-	function tasksReducer(state={tasks:[]},action)
+	function tasksReducer(state={tasks:[],isAdding:false,isFetching:false},action)
 	{
 		switch (action.type) {
 
-			case 'ADD_TASK':
-				const items=state.tasks.slice(0)
-				items.push({sourceUrl: action.url,state:'NEW'})
+			case 'POST_TASK': {
+				return Object.assign({}, state, {
+					isAdding: true
+				})
+			}
+
+			case 'TASKS_ADDED': {
+				const items = state.tasks.slice(0)
+				items.push(action.tasks)
 				return Object.assign({}, state, {
 					tasks: items
 				})
+			}
 
-			case 'TASK_UPDATE_RECEIVED':
-			case 'TASK_ADD_RECEIVED':
-				return state
-
-			case 'TASK_DELETE_RECEIVED':
-				return state
-
+			case 'REQUEST_TASKS': {
+				return Object.assign({}, state, {
+					isFetching: true
+				})
+			}
+			case 'RECEIVE_TASKS': {
+				return Object.assign({}, state, {
+					isFetching: false,
+					tasks: action.tasks,
+					lastUpdated: action.receivedAt
+				})
+			}
 			default:
 				return state
 		}
