--- a/getdown-ux-console/src/redux-reducers.html
+++ b/getdown-ux-console/src/redux-reducers.html
@@ -1,7 +1,6 @@
-<script src="../node_modules/redux/dist/redux.min.js"></script>
+<script src="../node_modules/redux/dist/redux.js"></script>
 
 <script>
-	import * as Redux from "redux"
 
 (function() {
 
